Refactoring Id type to UUID and cleaning space area