@@ -20,10 +20,11 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 public class RoomServiceImpl implements RoomService {
-
     private final RoomRepository roomRepository;
     private final ModelMapper modelMapper;
 
@@ -37,42 +38,46 @@ public class RoomServiceImpl implements RoomService {
         final List<RoomDto> roomDtos = roomRepository.findAll()
                 .stream()
                 .map(room-> modelMapper.map(room, RoomDto.class))
-                .toList();
+                .collect(Collectors.toList());
+
         return new SuccessDataResult<>(roomDtos, ResultMessages.EMPTY);
     }
 
     @Override
-    public DataResult<RoomDto> getRoomById(Long id) {
+    public DataResult<RoomDto> getRoomById(UUID id) {
         final Room room = findRoomById(id);
         final RoomDto roomDto = modelMapper.map(room, RoomDto.class);
+
         return new SuccessDataResult<>(roomDto, ResultMessages.EMPTY);
     }
 
     @Override
-    public DataResult<GameDto> getGameByRoomId(Long roomId) {
+    public DataResult<GameDto> getGameByRoomId(UUID roomId) {
         final Game game = Optional.ofNullable(findRoomById(roomId).getGame())
                 .orElseThrow(() -> new EntityNotFoundException(ResultMessages.NOT_FOUND_DATA));
         final GameDto gameDto = modelMapper.map(game, GameDto.class);
+
         return new SuccessDataResult<>(gameDto, ResultMessages.EMPTY);
     }
 
     @Override
-    public DataResult<List<WordDto>> getWordsByRoomId(Long roomId) {
+    public DataResult<List<WordDto>> getWordsByRoomId(UUID roomId) {
         final Game game = Optional.ofNullable(findRoomById(roomId).getGame())
                 .orElseThrow(() -> new RuntimeException(ResultMessages.NOT_FOUND_DATA));
         final List<WordDto> wordDtos = game.getWords()
                 .stream()
                 .map(word-> modelMapper.map(word, WordDto.class))
-                .toList();
+                .collect(Collectors.toList());
+
         return new SuccessDataResult<>(wordDtos, ResultMessages.EMPTY);
     }
 
     @Override
-    public DataResult<List<UserDto>> getUsersByRoomId(Long roomId) {
+    public DataResult<List<UserDto>> getUsersByRoomId(UUID roomId) {
         final Room room = findRoomById(roomId);
         final List<UserDto> userDtos = room.getUsers()
                 .stream().map(user -> modelMapper.map(user, UserDto.class))
-                .toList();
+                .collect(Collectors.toList());
 
         return new SuccessDataResult<>(userDtos, ResultMessages.EMPTY);
     }
@@ -87,15 +92,18 @@ public class RoomServiceImpl implements RoomService {
         }
 
         final Room room = new Room();
-        room.setCreatorId(roomPostRequest.getCreatorId());
+
+        room.setCreatorId(UUID.fromString(roomPostRequest.getCreatorId()));
         room.setRoomName(roomPostRequest.getRoomName());
         room.setCapacity(roomPostRequest.getCapacity());
+
         final RoomDto roomDto = modelMapper.map(roomRepository.save(room), RoomDto.class);
+
         return new SuccessDataResult<>(roomDto, ResultMessages.SUCCESS_CREATE);
     }
 
     @Override
-    public DataResult<RoomDto> updateRoomById(Long id, RoomPutRequest roomPutRequest) {
+    public DataResult<RoomDto> updateRoomById(UUID id, RoomPutRequest roomPutRequest) {
         final Room roomToUpdate = findRoomById(id);
 
         boolean isUserInRoom = roomToUpdate.getUsers()
@@ -105,14 +113,15 @@ public class RoomServiceImpl implements RoomService {
         if(!isUserInRoom)
             return new ErrorDataResult<>(null, RoomMessages.ROOM_USER_NOT_JOINED);
 
-        roomToUpdate.setWinnerId(roomPutRequest.getWinnerId());
+        roomToUpdate.setWinnerId(UUID.fromString(roomPutRequest.getWinnerId()));
+
         final RoomDto roomDto = modelMapper.map(roomRepository.save(roomToUpdate), RoomDto.class);
 
         return new SuccessDataResult<>(roomDto, ResultMessages.SUCCESS_UPDATE);
     }
 
     @Override
-    public Result deleteRoomById(Long id) {
+    public Result deleteRoomById(UUID id) {
         final Room room = findRoomById(id);
 
         roomRepository.delete(room);
@@ -120,9 +129,8 @@ public class RoomServiceImpl implements RoomService {
         return new SuccessResult(ResultMessages.SUCCESS_DELETE);
     }
 
-    private Room findRoomById(Long id){
+    private Room findRoomById(UUID id){
         return roomRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException(ResultMessages.NOT_FOUND_DATA));
     }
-
 }
