@@ -20,6 +20,8 @@ import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 public class UserScoreServiceImpl implements UserScoreService {
@@ -30,7 +32,10 @@ public class UserScoreServiceImpl implements UserScoreService {
 
     private final ModelMapper modelMapper;
 
-    public UserScoreServiceImpl(UserScoreRepository userScoreRepository, GameRepository gameRepository, UserRepository userRepository, ModelMapper modelMapper) {
+    public UserScoreServiceImpl(UserScoreRepository userScoreRepository,
+                                GameRepository gameRepository,
+                                UserRepository userRepository,
+                                ModelMapper modelMapper) {
         this.userScoreRepository = userScoreRepository;
         this.gameRepository = gameRepository;
         this.userRepository = userRepository;
@@ -38,93 +43,104 @@ public class UserScoreServiceImpl implements UserScoreService {
     }
 
     @Override
-    public DataResult<List<UserScoreDto>> getAllUserScoresByGameId(Long gameId) {
+    public DataResult<List<UserScoreDto>> getAllUserScoresByGameId(UUID gameId) {
         List<UserScoreDto> userScoreDtos = findUserScoreByGameId(gameId)
                 .stream().map(userScore -> modelMapper.map(userScore, UserScoreDto.class))
-                .toList();
+                .collect(Collectors.toList());
 
         return new SuccessDataResult<>(userScoreDtos, ResultMessages.EMPTY);
     }
 
     @Override
-    public DataResult<List<UserScoreDto>> getAllUserScoresByUserId(Long userId) {
-        List<UserScoreDto> userScoreDtos = findUserScoreByUserId(userId)
+    public DataResult<List<UserScoreDto>> getAllUserScoresByUserId(UUID userId) {
+       final  List<UserScoreDto> userScoreDtos = findUserScoreByUserId(userId)
                 .stream().map(userScore -> modelMapper.map(userScore, UserScoreDto.class))
-                .toList();
+                .collect(Collectors.toList());
 
         return new SuccessDataResult<>(userScoreDtos, ResultMessages.EMPTY);
     }
 
     @Override
-    public DataResult<UserScoreDto> getUserScoreByUserIdAndGameId(Long userId, Long gameId) {
-        return new SuccessDataResult<>(modelMapper.map(findUserScoreByUserIdAndGameId(userId, gameId), UserScoreDto.class), ResultMessages.EMPTY);
+    public DataResult<UserScoreDto> getUserScoreByUserIdAndGameId(UUID userId, UUID gameId) {
+        return new SuccessDataResult<>
+                (modelMapper.map(findUserScoreByUserIdAndGameId(userId, gameId), UserScoreDto.class),
+                        ResultMessages.EMPTY);
     }
 
     @Override
     public DataResult<UserScoreDto> createUserScore(UserScorePostRequest userScorePostRequest) {
-        UserScore userScore = new UserScore();
-        final User user = findUserById(userScorePostRequest.getUserId());
-        final Game game = findGameById(userScorePostRequest.getGameId());
+        final UserScore userScore = new UserScore();
+        final User user = findUserById(UUID.fromString(userScorePostRequest.getUserId()));
+        final Game game = findGameById(UUID.fromString(userScorePostRequest.getGameId()));
+
         userScore.setUser(user);
         userScore.setGame(game);
         userScore.setScore(userScorePostRequest.getScore());
+
         return new SuccessDataResult<>(modelMapper.map(userScoreRepository.save(userScore), UserScoreDto.class), ResultMessages.SUCCESS_CREATE);
     }
 
     @Override
     public DataResult<UserScoreDto> updateUserScore(UserScorePutRequest userScorePutRequest) {
-        UserScore userScore = findUserScoreByUserIdAndGameId(userScorePutRequest.getUserId(), userScorePutRequest.getGameId());
+        final UserScore userScore = findUserScoreByUserIdAndGameId(UUID.fromString(userScorePutRequest.getUserId()),
+                UUID.fromString(userScorePutRequest.getGameId()));
+
         userScore.setScore(userScorePutRequest.getScore());
+
         return new SuccessDataResult<>(modelMapper.map(userScoreRepository.save(userScore), UserScoreDto.class), ResultMessages.SUCCESS_UPDATE);
     }
 
     @Override
-    public Result deleteUserScoreByUserId(Long userId) {
+    public Result deleteUserScoreByUserId(UUID userId) {
         final List<UserScore> userScore = findUserScoreByUserId(userId);
+
         userScoreRepository.deleteAll(userScore);
+
         return new SuccessResult(ResultMessages.SUCCESS_DELETE);
     }
 
     @Override
-    public Result deleteUserScoreByGameId(Long gameId) {
+    public Result deleteUserScoreByGameId(UUID gameId) {
         final List<UserScore> userScores = findUserScoreByGameId(gameId);
+
         userScoreRepository.deleteAll(userScores);
+
         return new SuccessResult(ResultMessages.SUCCESS_DELETE);
     }
 
     @Override
-    public Result deleteUserScoreByUserIdAndGameId(Long userId, Long gameId) {
+    public Result deleteUserScoreByUserIdAndGameId(UUID userId, UUID gameId) {
         final UserScore userScore = findUserScoreByUserIdAndGameId(userId, gameId);
         userScoreRepository.delete(userScore);
         return new SuccessResult(ResultMessages.SUCCESS_DELETE);
     }
 
-    private UserScore findUserScoreById(Long id){
+    private UserScore findUserScoreById(UUID id){
         return userScoreRepository.findById(id)
                 .orElseThrow(()-> new EntityNotFoundException(ResultMessages.NOT_FOUND_DATA));
     }
 
-    private List<UserScore> findUserScoreByGameId(Long gameId){
+    private List<UserScore> findUserScoreByGameId(UUID gameId){
         return userScoreRepository.findByGameId(gameId)
                 .orElseThrow(()-> new EntityNotFoundException(ResultMessages.NOT_FOUND_DATA));
     }
 
-    private List<UserScore> findUserScoreByUserId(Long userId){
+    private List<UserScore> findUserScoreByUserId(UUID userId){
         return userScoreRepository.findByUserId(userId)
                 .orElseThrow(()-> new EntityNotFoundException(ResultMessages.NOT_FOUND_DATA));
     }
 
-    private UserScore findUserScoreByUserIdAndGameId(Long userId, Long gameId){
+    private UserScore findUserScoreByUserIdAndGameId(UUID userId, UUID gameId){
         return userScoreRepository.findByUserIdAndGameId(userId, gameId)
                 .orElseThrow(()-> new EntityNotFoundException(ResultMessages.NOT_FOUND_DATA));
     }
 
-    private Game findGameById(Long id){
+    private Game findGameById(UUID id){
         return gameRepository.findById(id)
                 .orElseThrow(()-> new EntityNotFoundException(ResultMessages.NOT_FOUND_DATA));
     }
 
-    private User findUserById(Long id){
+    private User findUserById(UUID id){
         return userRepository.findById(id)
                 .orElseThrow(()-> new EntityNotFoundException(ResultMessages.NOT_FOUND_DATA));
     }
