@@ -15,10 +15,11 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 public class WordServiceImpl implements WordService {
-
     private final WordRepository wordRepository;
     private final ModelMapper modelMapper;
 
@@ -31,13 +32,15 @@ public class WordServiceImpl implements WordService {
     public DataResult<List<WordDto>> getAllWords() {
         final List<WordDto> wordDtos = wordRepository.findAll()
                 .stream().map(word -> modelMapper.map(word, WordDto.class))
-                .toList();
+                .collect(Collectors.toList());
+
         return new SuccessDataResult<>(wordDtos, ResultMessages.EMPTY);
     }
 
     @Override
-    public DataResult<WordDto> getWordById(Long id) {
+    public DataResult<WordDto> getWordById(UUID id) {
         final Word word = findById(id);
+
         return new SuccessDataResult<>(modelMapper.map(word, WordDto.class), ResultMessages.EMPTY);
     }
 
@@ -49,15 +52,16 @@ public class WordServiceImpl implements WordService {
         if(isAnySameWord)
             throw new EntityAlreadyExistException(ResultMessages.ALREADY_EXIST);
 
-        Word word = new Word();
+        final Word word = new Word();
 
         word.setText(wordPostRequest.getText());
         word.setLanguage(wordPostRequest.getLanguage());
+
         return new SuccessDataResult<>(modelMapper.map(wordRepository.save(word), WordDto.class), ResultMessages.SUCCESS_CREATE);
     }
 
     @Override
-    public DataResult<WordDto> updateWordById(Long id, WordPutRequest wordPutRequest) {
+    public DataResult<WordDto> updateWordById(UUID id, WordPutRequest wordPutRequest) {
         final Word wordToUpdate = findById(id);
 
         boolean isAnySameWord = wordRepository
@@ -75,13 +79,15 @@ public class WordServiceImpl implements WordService {
     }
 
     @Override
-    public Result deleteWordById(Long id) {
+    public Result deleteWordById(UUID id) {
         final Word word = findById(id);
+
         wordRepository.delete(word);
+
         return new SuccessResult(ResultMessages.SUCCESS_DELETE);
     }
 
-    private Word findById(Long id){
+    private Word findById(UUID id){
         return wordRepository.findById(id)
                 .orElseThrow(()-> new EntityNotFoundException(ResultMessages.NOT_FOUND_DATA));
     }
